--- a/src/main/resources/META-INF/launcher.cfg
+++ b/src/main/resources/META-INF/launcher.cfg
@@ -5,7 +5,7 @@ server.port = 9999
 info.url = http://s3.amazonaws.com/dev.hortonworks.com/HDP/hdp_urlinfo.json
 cache.timeout = 15m
 
-platform.centos5 = hdpbn.repo
-platform.centos6 = hdpbn.repo
-platform.suse11 = hdpbn.repo
-platform.ubuntu12 = hdpbn.repo
+platform.centos5 = hdp.repo
+platform.centos6 = hdp.repo
+platform.suse11 = hdp.repo
+platform.ubuntu12 = hdp.list
